--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@types/react": "^17.0.32",
     "json-server": "^0.17.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.0.1"
+    "sass": "^1.43.3",
+    "swr": "^1.0.1",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "eslint": "8.0.1",
