--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@types/react": "^17.0.32",
     "json-server": "^0.17.0",
+    "mongodb": "^3.5.9",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.3",
